--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
     box-sizing: border-box;
     line-height: none;
     outline: unset;
-    background-color: #2E2E2E;
 }
 
 header{
@@ -37,6 +36,7 @@ header{
 }
 
 body{
+    background-color: #2E2E2E;
     color: #f2f2f2;
 }
 
@@ -47,9 +47,18 @@ body{
     padding: 16px var(--margin-page);
 }
 
-#track-list .flex {
-    background-color: #A375DB; 
+#track-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+}
+#track-list .song {
+    transition: background .3s ease-in;
     border-radius: 10px; 
+}
+#track-list .song:hover {
+    background-color: #A375DB; 
+    /* color: #2E2E2E; */
+    /* 
     padding: 1rem; 
-    margin-bottom: 1rem; 
-  }
+    margin-bottom: 1rem;  */
+}
