Modificaciones Reproductor Día Martes (Prototipo funcional Final)

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 
 #track-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 #track-list .song {
